syntax = "proto3";
package room;
import "common.proto";

//房间成员信息
message Member{
    common.RoleInfo role_info = 1;
    uint32 position  = 2;
    bool ready  = 3;
}

//请求信息
message Info2S{
}

//返回信息
message Info2C{
    uint32 status = 1;   // 0等待 1游戏中
    repeated Member members = 2;
}


//踢人
message Kick2S{
    uint64 role_id = 1; //角色ID
}

//踢人成功
message Kick2C{
}


//换位置
message ChangePosition2S{
    uint32 position = 1; //位置ID
}

//换位置成功
message ChangePosition2C{
}


//退出房间
message Exit2S{

}

//推出房间
message Exit2C{

}

//开始游戏
message StartGame2S{

}

//开始游戏返回
message StartGame2C{
    
}